# forge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/vector/: CMakeLists.txt  bench_access.cpp  bench_construction.cpp  bench_deletion.cpp  bench_insertion.cpp  bench_utils.hpp
docs/design/: vector.md
examples/: CMakeLists.txt  vector_example.cpp
include/forge/: vector.hpp
tests/: CMakeLists.txt  vector_tests.cpp
